--- a/src/Views/callback.twig
+++ b/src/Views/callback.twig
@@ -1,1 +1,9 @@
-{{dump(data)}}
+{% extends "base.html" %}
+
+{% block title %}Profile{% endblock %}
+
+{% block content %}
+    <h1>Profile</h1>
+
+		{{dump(data)}}
+{% endblock %}
