--- a/src/Views/base.html
+++ b/src/Views/base.html
@@ -5,19 +5,124 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-		{% block head %}
-				<title>{% block title %}{% endblock %} - My Webpage</title>
-		{% endblock %}
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.css" />
+    <style type="text/css">
+    /* Space out content a bit */
+body {
+padding-top: 1.5rem;
+padding-bottom: 1.5rem;
+}
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+padding-right: 1rem;
+padding-left: 1rem;
+}
+
+/* Custom page header */
+.header {
+padding-bottom: 1rem;
+border-bottom: .05rem solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+margin-top: 0;
+margin-bottom: 0;
+line-height: 3rem;
+}
+
+/* Custom page footer */
+.footer {
+padding-top: 1.5rem;
+color: #777;
+border-top: .05rem solid #e5e5e5;
+}
+
+/* Customize container */
+@media (min-width: 48em) {
+.container {
+max-width: 46rem;
+}
+}
+.container-narrow > hr {
+margin: 2rem 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+text-align: center;
+border-bottom: .05rem solid #e5e5e5;
+}
+.jumbotron .btn {
+padding: .75rem 1.5rem;
+font-size: 1.5rem;
+}
+
+/* Supporting marketing content */
+.marketing {
+margin: 3rem 0;
+}
+.marketing p + h4 {
+margin-top: 1.5rem;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 48em) {
+/* Remove the padding we set earlier */
+.header,
+.marketing,
+.footer {
+padding-right: 0;
+padding-left: 0;
+}
+/* Space out the masthead */
+.header {
+margin-bottom: 2rem;
+}
+/* Remove the bottom border on the jumbotron for visual effect */
+.jumbotron {
+border-bottom: 0;
+}
+}
+    </style>
+    {% block head %}
+        <title>{% block title %}{% endblock %} - My Webpage</title>
+    {% endblock %}
   </head>
   <body>
-		<div class="container">{% block content %}{% endblock %}</div>
-		<div id="footer">
-				{% block footer %}
-						&copy; Copyright 2011 by <a href="http://domain.invalid/">you</a>.
-				{% endblock %}
-		</div>
-		<script src="js/bootstrap.js"></script>
+    <a href="https://github.com/lpirola/oidc-web-client">
+      <img style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+    </a>
+    <div class="container">
+
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-xs-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/client">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/authenticate">Authenticate</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">OIDC Web Client</h3>
+      </div>
+
+      {% block content %}{% endblock %}
+
+      <div class="footer">
+          {% block footer %}
+					Made with <3
+          {% endblock %}
+      </div>
+    </div>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
