--- a/src/Views/authenticate.twig
+++ b/src/Views/authenticate.twig
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Auth{% endblock %}
+{% block title %}Oauth2 Authentication{% endblock %}
 
 {% block content %}
-    <h1>Auth</h1>
+    <h1>Oauth2 Authentication</h1>
 
 		<form action="#" method="post">
 		    {{ form_widget(form) }}
