--- a/src/Views/base.html
+++ b/src/Views/base.html
@@ -89,11 +89,11 @@ border-bottom: 0;
 }
     </style>
     {% block head %}
-        <title>{% block title %}{% endblock %} - My Webpage</title>
+        <title>{% block title %}{% endblock %} - OIDC Web Client</title>
     {% endblock %}
   </head>
   <body>
-    <a href="https://github.com/lpirola/oidc-web-client">
+    <a href="https://github.com/redelivre/oidc-web-client">
       <img style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
     </a>
     <div class="container">
@@ -102,7 +102,9 @@ border-bottom: 0;
         <nav>
           <ul class="nav nav-pills pull-xs-right">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home
+                <!-- <span class="sr-only">(current)</span> -->
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/client">Register</a>
