--- a/src/Views/callback.twig
+++ b/src/Views/callback.twig
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Profile{% endblock %}
+{% block title %}User Info{% endblock %}
 
 {% block content %}
-    <h1>Profile</h1>
+    <h1>User Info</h1>
 
 		{{dump(data)}}
 {% endblock %}
