--- a/src/Views/client.twig
+++ b/src/Views/client.twig
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Client{% endblock %}
+{% block title %} Dynamic Register{% endblock %}
 {% block head %}
     {{ parent() }}
     <style type="text/css">
@@ -8,7 +8,7 @@
     </style>
 {% endblock %}
 {% block content %}
-    <h1>Client</h1>
+    <h1>Dynamic Register</h1>
 
 		<form action="#" method="post">
 		    {{ form_widget(form) }}
